@@ -3,6 +3,8 @@
 	* logo-competition/logos_new.php:
 	* logo-competition/logos/Krzysztof_Bartczak/*:
 	added logo
+	* documentation/faq/index.php:
+	updated faq
 	
 2003-08-07  Uwe Pross  <uwe.pross@gmx.net>
 
